src/objects/npsp__GetStartedChecklistItem__mdt.object
<CustomObject>
    <description>NPSP Get Started Page section items</description>
    <fields>
        <fullName>npsp__Description_Label__c</fullName>
        <description>The API Name for the Description label of this item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API Name for the Description label of this item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Description Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Extra_Info_Label__c</fullName>
        <description>The API name of the Extra Info Label, which provides extra information about a section item (such as video length, PDF, etc). Shown in the upper right corner.</description>
        <inlineHelpText>The API name of the Extra Info Label, which provides extra information about a section item (such as video length, PDF, etc). Shown in the upper right corner.</inlineHelpText>
        <label>Extra Info Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__GS_Checklist_Section__c</fullName>
        <description>The section on the Get Started page that this item is part of.</description>
        <inlineHelpText>The section on the Get Started page that this item is part of.</inlineHelpText>
        <label>GS Checklist Section</label>
        <referenceTo>npsp__GetStartedChecklistSection__mdt</referenceTo>
        <relationshipLabel>GS Checklist Items</relationshipLabel>
        <relationshipName>GetStartedChecklistItems</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Has_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the item has a link to display.</description>
        <inlineHelpText>Indicates if the item has a link to display.</inlineHelpText>
        <label>Has Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Image__c</fullName>
        <description>The filename of the image in the CumulusResources Static Resource (in the gsAssets/step folder) to render.</description>
        <inlineHelpText>The filename of the image in the CumulusResources Static Resource (in the gsAssets/step folder) to render.</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Link_Label__c</fullName>
        <description>The API name for the Link label of a link on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Link label of a link on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Link Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Link_URL__c</fullName>
        <description>The target URL for a link on the Get Started page.</description>
        <inlineHelpText>The target URL for a link on the Get Started page.</inlineHelpText>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Position__c</fullName>
        <description>The position of this section item on the Get Started page.</description>
        <inlineHelpText>The position of this section item on the Get Started page.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Button_Label__c</fullName>
        <description>The API name for the Primary Button label in a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Primary Button label in a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Primary Button Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Button_Type__c</fullName>
        <description>The type of action related to the Primary Button. Indicates if the button is disabled, opens a new Salesforce tab, or opens an external page.</description>
        <inlineHelpText>The type of action related to the Primary Button. Indicates if the button is disabled, opens a new Salesforce tab, or opens an external page.</inlineHelpText>
        <label>Primary Button Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>sfdc:new-tab</fullName>
                    <label>SFDC New Tab</label>
                </value>
                <value>
                    <fullName>link</fullName>
                    <label>External Page</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Primary_Button_Value__c</fullName>
        <description>The action of the Primary Button.
For an External Page button, the external URL.
For an SFDC New Tab button, the format is &quot;{pageReference}:{objectOrPageApiName}:{action}&quot;. See the Lightning NavigationMixin Documentation for examples and all specs.</description>
        <inlineHelpText>The action of the Primary Button.
For an External Page button, the external URL.
For an SFDC New Tab button, the format is &quot;{pageReference}:{objectOrPageApiName}:{action}&quot;. See the Lightning NavigationMixin Documentation for examples and all specs.</inlineHelpText>
        <label>Primary Button Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Secondary_Button_Label__c</fullName>
        <description>The API name for the Secondary Button label in a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Secondary Button label in a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Secondary Button Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Secondary_Button_Type__c</fullName>
        <description>The type of action related to the Secondary Button. Indicates if the button is disabled, opens a new Salesforce tab, or opens an external page</description>
        <inlineHelpText>The type of action related to the Secondary Button. Indicates if the button is disabled, opens a new Salesforce tab, or opens an external page</inlineHelpText>
        <label>Secondary Button Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>sfdc:new-tab</fullName>
                    <label>SFDC New Tab</label>
                </value>
                <value>
                    <fullName>link</fullName>
                    <label>External Page</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Secondary_Button_Value__c</fullName>
        <description>The action of the Secondary Button.
For an External Page button, the external URL.
For an SFDC New Tab button, the format is &quot;{pageReference}:{objectOrPageApiName}:{action}&quot;. See the Lightning NavigationMixin Documentation for examples and all specs.</description>
        <inlineHelpText>The action of the Secondary Button.
For an External Page button, the external URL.
For an SFDC New Tab button, the format is &quot;{pageReference}:{objectOrPageApiName}:{action}&quot;. See the Lightning NavigationMixin Documentation for examples and all specs.</inlineHelpText>
        <label>Secondary Button Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Title_Label__c</fullName>
        <description>The API name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Title Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NPSP Get Started Checklist Item</label>
    <pluralLabel>NPSP Get Started Checklist Items</pluralLabel>
</CustomObject>